# thesis_scripts

./: README.md  README.rst  pyproject.toml
ma_scripts/: __init__.py  _version.py  version.py
ma_scripts/baselines/: __init__.py  baselines.py
ma_scripts/gridding/: gridding.py
ma_scripts/plotting/: skyplots.py
ma_scripts/simulation/: __init__.py  create_measurement.py  sky.py
ma_scripts/utils/: __init__.py  colors.py  layouts.py  utils.py
thesis_scripts/: __init__.py  version.py
thesis_scripts/baselines/: baselines.py
thesis_scripts/gridding/: __init__.py  gridding.py
thesis_scripts/io/: __init__.py  fits_reader.py
thesis_scripts/plotting/: __init__.py  baseline_plotter.py  skyplots.py
thesis_scripts/simulation/: create_measurement.py
thesis_scripts/utils/: __init__.py
